<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>biz.aQute.bnd</groupId>
	<artifactId>bnd-plugin-parent</artifactId>
	<description>Parent POM for the Bnd Maven plugins.</description>
	<name>Bnd Maven Plugins Parent</name>
	<packaging>pom</packaging>
	<version>${revision}</version>

	<properties>
		<revision>7.0.0-SNAPSHOT</revision>
		<project.build.outputTimestamp>1980-02-01T00:00:00Z</project.build.outputTimestamp>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<jpmsOptions>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.jar=ALL-UNNAMED --add-opens=java.base/java.util.regex=ALL-UNNAMED --add-opens=java.base/java.util.zip=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.file=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED</jpmsOptions>
		<mavenOpts>${jpmsOptions}</mavenOpts>
		<osgi.annotation.version>8.1.0</osgi.annotation.version>
		<!-- The following versions must match those in cnf/ext/maven-plugin.bnd -->
		<maven.target.version>3.3.9</maven.target.version>
		<aether.version>1.0.2.v20150114</aether.version>
		<!-- The following versions should match those in cnf/ext/junit.bnd -->
		<junit.jupiter.version>5.9.2</junit.jupiter.version>
		<assertj.version>3.24.1</assertj.version>
	</properties>

	<url>https://bnd.bndtools.org/</url>
	<organization>
		<name>Bndtools</name>
		<url>https://bndtools.org/</url>
	</organization>
	<licenses>
		<license>
			<name>(Apache-2.0 OR EPL-2.0)</name>
			<comments>This program and the accompanying materials are made available under the terms of the Apache License, Version 2.0, or the Eclipse Public License 2.0.</comments>
			<url>https://opensource.org/licenses/Apache-2.0,https://opensource.org/licenses/EPL-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/bndtools/bnd</url>
		<connection>scm:git:https://github.com/bndtools/bnd.git</connection>
		<developerConnection>scm:git:git@github.com:bndtools/bnd.git</developerConnection>
		<tag>${revision}</tag>
	</scm>
	<developers>
		<developer>
			<id>neil.bartlett@paremus.com</id>
			<email>neil.bartlett@paremus.com</email>
		</developer>
		<developer>
			<id>timothyjward</id>
			<email>timothyjward@apache.org</email>
		</developer>
		<developer>
			<id>rotty3000</id>
			<name>Ray Augé</name>
			<email>raymond.auge@liferay.com</email>
			<url>https://rotty3000.github.io</url>
			<organization>Liferay Inc.</organization>
			<organizationUrl>https://www.liferay.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
		<developer>
			<id>bjhargrave</id>
			<name>BJ Hargrave</name>
			<email>bj@hargrave.dev</email>
			<url>https://github.com/bjhargrave</url>
			<organization>IBM</organization>
			<organizationUrl>https://developer.ibm.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-core</artifactId>
				<version>${maven.target.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-plugin-api</artifactId>
				<version>${maven.target.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-artifact</artifactId>
				<version>${maven.target.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.shared</groupId>
				<artifactId>maven-mapping</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugin-tools</groupId>
				<artifactId>maven-plugin-annotations</artifactId>
				<version>3.7.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.sonatype.plexus</groupId>
				<artifactId>plexus-build-api</artifactId>
				<version>0.0.7</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.5</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.aether</groupId>
				<artifactId>aether-api</artifactId>
				<version>${aether.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.aether</groupId>
				<artifactId>aether-util</artifactId>
				<version>${aether.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>biz.aQute.bnd.maven</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>biz.aQute.bnd.util</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>biz.aQute.bndlib</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>biz.aQute.resolve</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>biz.aQute.repository</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>biz.aQute.bnd.reporter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>biz.aQute.bnd.embedded-repo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.jupiter.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>1.7.36</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.annotation</artifactId>
				<version>${osgi.annotation.version}</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.annotation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<showWarnings>true</showWarnings>
						<showDeprecation>true</showDeprecation>
						<compilerArgs>
							<arg>-Xlint:unchecked</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.7.0</version>
					<executions>
						<execution>
							<id>default-helpmojo</id>
							<goals>
								<goal>helpmojo</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<configuration>
						<archive>
							<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<SPDX-License-Identifier>${project.licenses[0].name}</SPDX-License-Identifier>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>verify</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.4.1</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<phase>verify</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<detectJavaApiLink>false</detectJavaApiLink>
						<doclint>none</doclint>
						<notimestamp>true</notimestamp>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-invoker-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<projectsDirectory>${basedir}/src/it</projectsDirectory>
						<settingsFile>${basedir}/src/it/settings.xml</settingsFile>
						<localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
						<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
						<cloneClean>true</cloneClean>
						<properties>
							<project.build.sourceEncoding>${project.build.sourceEncoding}</project.build.sourceEncoding>
							<project.reporting.outputEncoding>${project.reporting.outputEncoding}</project.reporting.outputEncoding>
							<maven.compiler.release>${maven.compiler.release}</maven.compiler.release>
							<bnd.version>${project.version}</bnd.version>
							<projectsDirectory>${basedir}/src/it</projectsDirectory>
							<localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
							<cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
						</properties>
						<scriptVariables>
							<bndVersion>${project.version}</bndVersion>
							<projectsDirectory>${basedir}/src/it</projectsDirectory>
						</scriptVariables>
						<mavenOpts>${mavenOpts}</mavenOpts>
						<pomIncludes>
							<pomInclude>*/pom.xml</pomInclude>
						</pomIncludes>
						<addTestClassPath>true</addTestClassPath>
						<showErrors>true</showErrors>
						<streamLogsOnFailures>true</streamLogsOnFailures>
						<writeJunitReport>true</writeJunitReport>
					</configuration>
					<executions>
						<execution>
							<id>integration-test</id>
							<goals>
								<goal>install</goal>
								<goal>run</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-invoker-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>install</goal>
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore>
											<message></message>
										</ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-plugin-plugin</artifactId>
										<versionRange>[3.5.2,)</versionRange>
										<goals>
											<goal>descriptor</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnConfiguration>true</runOnConfiguration>
											<runOnIncremental>true</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>flatten-maven-plugin</artifactId>
										<versionRange>[1.0.1,)</versionRange>
										<goals>
											<goal>flatten</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnConfiguration>true</runOnConfiguration>
											<runOnIncremental>true</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.3.0</version>
					<configuration>
						<flattenMode>oss</flattenMode>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>process-resources</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>flatten-clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.plexus</groupId>
					<artifactId>plexus-component-metadata</artifactId>
					<version>2.1.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-plugin-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-invoker-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>maven-opts</id>
			<activation>
				<property>
					<name>env.MAVEN_OPTS</name>
				</property>
			</activation>
			<properties>
				<mavenOpts>${env.MAVEN_OPTS} ${jpmsOptions}</mavenOpts>
			</properties>
		</profile>
		<profile>
			<id>dist</id>
			<properties>
				<releaserepo>file:${basedir}/../../dist/bundles</releaserepo>
				<skipTests>true</skipTests>
				<invoker.skip>true</invoker.skip>
			</properties>
			<distributionManagement>
				<snapshotRepository>
					<id>dist</id>
					<url>${releaserepo}</url>
				</snapshotRepository>
				<repository>
					<id>dist</id>
					<url>${releaserepo}</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>jfrog</id>
			<activation>
				<property>
					<name>env.CANONICAL</name>
					<value>true</value>
				</property>
			</activation>
			<properties>
				<skipTests>true</skipTests>
				<invoker.skip>true</invoker.skip>
			</properties>
			<distributionManagement>
				<snapshotRepository>
					<id>bndtools.jfrog.io</id>
					<url>https://bndtools.jfrog.io/bndtools/libs-snapshot-local/</url>
				</snapshotRepository>
				<repository>
					<id>bndtools.jfrog.io</id>
					<url>https://bndtools.jfrog.io/bndtools/libs-release-local/</url>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>
</project>
